# lazy-type-hint

./: .gitignore  404.html  README.md  TODO.md  check_code.py  check_code_args.yaml  delete.py  example.yaml  index.html  mkdocs.yaml  pyproject.toml
docs/: index.md
docs/user_guide/: configuration.md  introduction.md  live_api.md  standard_api.md
dynamic_pyi_generator/: __init__.py  class_generator.py  file_handler.py  py.typed  pyi_generator.py  pyi_generator.pyi  strategies.py  type_aliases.py  typed_dict_generator.py  typed_dict_validator.py  utils.py
dynamic_pyi_generator/data_type_tree/: __init__.py  data_type_tree.py  factory.py
dynamic_pyi_generator/data_type_tree/generic_type/: __init__.py  dict_data_type_tree.py  generic_data_type_tree.py  list_data_type_tree.py  mapping_data_type_tree.py  mapping_proxy_data_type_tree.py  sequence_data_type_tree.py  set_and_sequence_operations.py  set_data_type_tree.py  tuple_data_type_tree.py
dynamic_pyi_generator/data_type_tree/simple_data_type_tree/: __init__.py  function_data_type_tree.py  instance_data_type_tree.py  simple_data_type_tree.py  type_data_type_tree.py
dynamic_pyi_generator/file_modifiers/: __init__.py  py_file_modifier.py  yaml_file_modifier.py
dynamic_pyi_generator/parser/: __init__.py  parse_bool.py  parse_mapping.py  parse_num.py  parse_sequence.py  parse_set.py  parse_str.py  parser.py
dynamic_pyi_generator/testing_tools/: __init__.py  mypy.py
dynamic_pyi_generator/utils/: __init__.py  import_manager.py  mypy.py  ordered_set.py  test_ordered_set.py  utils.py
lazy_type_hint/: __init__.py  lazy_type_hint.py  lazy_type_hint.pyi  strategies.py
lazy_type_hint/data_type_tree/: __init__.py  data_type_tree.py  factory.py
lazy_type_hint/data_type_tree/generic_type/: __init__.py  dict_data_type_tree.py  generic_data_type_tree.py  iterator_data_type_tree.py  list_data_type_tree.py  mapping_data_type_tree.py  mapping_proxy_data_type_tree.py  pandas_data_frame_data_type_tree.py  pandas_series_data_type_tree.py  sequence_data_type_tree.py  set_and_sequence_operations.py  set_data_type_tree.py  tuple_data_type_tree.py
lazy_type_hint/data_type_tree/simple_data_type_tree/: __init__.py  function_data_type_tree.py  instance_data_type_tree.py  io_data_type_tree.py  module_data_type_tree.py  numpy_data_type_tree.py  pandas_series_data_type_tree.py  simple_data_type_tree.py  type_data_type_tree.py
lazy_type_hint/file_modifiers/: __init__.py  py_file_modifier.py  yaml_file_modifier.py
lazy_type_hint/generators/: lazy_type_hint.py  lazy_type_hint_abc.py  lazy_type_hint_live.py
lazy_type_hint/utils/: __init__.py  docstring_formatter.py  import_manager.py  mypy.py  ordered_set.py  test_ordered_set.py  utils.py
search/: search_index.json
tests/: conftest.py  test_docs.py  test_file_handler.py  test_import_manager.py  test_pyi_generator.py  test_typed_dict_generator.py  test_utils.py
tests/test_data_type/: conftest.py  test_data_type_tree.py
tests/test_data_type/test_files/: list.py
tests/test_data_type/test_generic_data_type_tree/: conftest.py  test_dict_data_type_tree.py  test_iterator_data_type_tree.py  test_list_data_type_tree.py  test_mapping_data_type_tree.py  test_pandas_data_frame_data_type_tree.py  test_pandas_series_data_type_tree.py  test_set_and_sequence_operations.py  test_set_data_type_tree.py  test_tuple_data_type_tree.py
tests/test_data_type/test_simple_data_type_tree/: test_func_data_type_tree.py  test_instance_data_type_tree.py  test_io_data_type_tree.py  test_module_type_data_type_tree.py  test_numpy_data_type_tree.py  test_pandas_series_data_type_tree.py  test_simple_data_type_tree.py  test_type_data_type_tree.py
tests/test_file_modifiers/test_file_modifier/: test_py_file_modifier.py
tests/test_file_modifiers/test_yaml_file_modifier/: test_yaml_file_modifier.py
tests/test_files/: not_ok.py  ok.py  wrong_value_type.py
tests/test_lazy_type_hint/: test_lazy_type_hint.py  test_lazy_type_hint_live.py
tests/test_lazy_type_hint/test_files/: nok_append_list_wrong_type.py  nok_append_sequence.py  nok_frozen_set.py  nok_key_missing.py  nok_list.py  nok_modify_mapping.py  nok_numpy.py  nok_pandas_dataframe.py  nok_pandas_series.py  ok_dict.py  ok_float.py  ok_int.py  ok_list.py  ok_nested_list.py  ok_numpy.py  ok_pandas_dataframe.py  ok_pandas_series.py  ok_str.py  wrong_value_type.py
tests/test_parser/: test_parse_mapping.py  test_parser.py
tests/test_parser/test_files/: default_result.py  dict_as_dict.py  dict_as_mapping.py  dict_as_typed_dict.py  lists_as_lists.py  lists_as_lists_with_any.py  lists_as_lists_with_object.py  lists_as_lists_with_union.py  lists_as_sequences_with_any.py  lists_as_sequences_with_object.py  lists_as_sequences_with_union.py  set_with_any.py  set_with_object.py  tuple_sized_with_any.py  tuple_sized_with_object.py  tuple_sized_with_union.py  tuple_unsized_with_any.py  tuple_unsized_with_object.py  tuple_unsized_with_union.py  tuples_object.py
tests/test_performance/: conftest.py  test_instantiation.py  test_performance.py
tests/test_performance/test_data_type_tree/: test_performance_data_type_tree.py  test_performance_mapping_based.py  test_performance_pandas_based.py  test_performance_set_and_sequence_based.py
tests/test_performance/test_files/: big_file.yaml
tests/test_performance/test_utils/: test_performance_utils.py
tests/test_pyi_generator/: test_lazy_type_hint.py  test_lazy_type_hint_live.py  test_pyi_generator.py
tests/test_pyi_generator/test_files/: key_missing.py  nok_append_list_wrong_type.py  nok_append_sequence.py  nok_frozen_set.py  nok_key_missing.py  nok_list.py  nok_modify_mapping.py  nok_non_compliant_dictionary.py  non_compliant_dictionary.py  ok.py  (+11 more)
tests/test_typed_dict_generator/: test_class_generator.py  test_parser.py  test_typed_dict_generator.py
tests/test_utils/: test_docstring_formatter.py  test_import_manager.py  test_ordered_set.py  test_utils.py
user_guide/configuration/: index.html
user_guide/introduction/: index.html
user_guide/live_api/: index.html
user_guide/standard_api/: index.html
(+11 files in other folders)
